Fixed overflow issue

--- a/frontend/src/containers/LandingPage/index.scss
+++ b/frontend/src/containers/LandingPage/index.scss
@@ -1,6 +1,6 @@
-// html{
-//   overflow: hidden;
-// }
+html {
+  overflow: auto;
+}
 
 .App {
   padding: 0px 150px;
